Fix menu text colour on mobile view

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -88,6 +88,7 @@
     }
 
     .page-link {
+      color: $grey-color-dark;
       display: block;
       padding: 5px 10px;
 
